--- a/app/src/main/res/drawable/description_bg.xml
+++ b/app/src/main/res/drawable/description_bg.xml
@@ -1,4 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <solid android:color="@color/light_pink" />
-    <stroke android:width="1dp" android:color="?attr/colorOnSurface" />
+    <corners android:radius="10dp"/>
+    <stroke android:width="5dp" android:color="@color/yellow" />
 </shape>
